--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Manuel\\AppData\\Roaming\\.jmonkeyplatform\\3.0\\build.properties
+user.properties.file=C:\\Users\\mhm\\AppData\\Roaming\\.jmonkeyplatform\\3.0\\build.properties
